--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,9 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-// 생성된 snippet 의 저장 위치 명시
+// compileJava -> test -> asciidoctor -> bootJar 순으로 실행
+
+// gradle은 build/generated-snippets에 스니펫이 생성되므로, 스니펫 생성 디렉토리를 변수에 담는다.
 ext {
 	set('snippetsDir', file("build/generated-snippets"))
 }
@@ -69,4 +71,22 @@ test {
 asciidoctor {
 	inputs.dir snippetsDir
 	dependsOn test
+}
+
+// asciidoctor 설정. 기존에 존재하는 docs를 삭제해준다.
+asciidoctor.doFirst {
+	delete file('src/main/resources/static/docs')
+}
+
+// asccidoctor 작업 이후 생성된 HTML 파일을 static/docs 로 copy
+task createDocument(type: Copy) {
+	dependsOn asciidoctor
+
+	from file("build/docs/asciidoc")
+	into file("src/main/resources/static/docs")
+}
+
+// build 전 createDocument(REST Docs 문서화) 실행!
+build {
+	dependsOn createDocument
 }
