--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,33 +1,25 @@
-name: Tanylog CI With Gradle
+name: Build and Deploy to EC2
 
 on:
-  release:
-    types: [push] # push를 하면 자동으로 실행
   push:
-    branches: [master] # master 브랜치에서 동작
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  build:
-
-    runs-on: amazon-linux-2
-    permissions:
-      contents: read
-      packages: write
-
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        
-    # ./gradlw 실행 권한 부여
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-      shell: bash
+      - uses: actions/checkout@v2
+      
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-    # 프로젝트 build
-    - name: Build with Gradle
-      run: ./gradlew clean build -x test
-      shell: bash
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+        shell: bash
+
+      - name: Build and Test
+        run: ./gradlew build test
