--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -43,15 +43,15 @@ spring:
 
         provider:
           kakao:
-            authorizationUri: oauth_kakao_authorizationUri
-            tokenUri: oauth_kakao_tokenUri
-            userInfoUri: oauth_kakao_userInfoUri
+            authorizationUri: https://kauth.kakao.com/oauth/authorize
+            tokenUri: https://kauth.kakao.com/oauth/token
+            userInfoUri: https://kapi.kakao.com/v2/user/me
             userNameAttribute: id
 
           naver:
-            authorizationUri: oauth_naver_authorizationUri
-            tokenUri: oauth_naver_tokenUri
-            userInfoUri: oauth_naver_userInfoUri
+            authorizationUri: https://nid.naver.com/oauth2.0/authorize
+            tokenUri: https://nid.naver.com/oauth2.0/token
+            userInfoUri: https://openapi.naver.com/v1/nid/me
             userNameAttribute: response
 
 
