--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,25 +1,82 @@
-name: Build and Deploy to EC2
+name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      
+      - uses: actions/checkout@v3
+
+      # JDK11로 gradle 빌드
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Insert data source information and OAuth2 information into application-deploy.yml
+        run: |
+          cd src
+          sed -i "s|datasource_url|$DATASOURCE_URL|g" main/resources/application-deploy.yml
+          sed -i "s|datasource_username|$DATASOURCE_USERNAME|g" main/resources/application-deploy.yml
+          sed -i "s|datasource_password|$DATASOURCE_PASSWORD|g" main/resources/application-deploy.yml
+          
+          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" main/resources/application-deploy.yml
+          
+          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application-deploy.yml
+          
+
+        env:
+          DATASOURCE_URL : ${{ secrets.DATASOURCE_URL }}
+          DATASOURCE_USERNAME : ${{ secrets.DATASOURCE_USERNAME }}
+          DATASOURCE_PASSWORD : ${{ secrets.DATASOURCE_PASSWORD }}
+
+          OAUTH_KAKAO_CLIENTID : ${{ secrets.OAUTH_KAKAO_CLIENTID }}
+          OAUTH_KAKAO_CLIENTSECRET : ${{ secrets.OAUTH_KAKAO_CLIENTSECRET }}
+          OAUTH_KAKAO_REDIRECTURI : ${{ secrets.OAUTH_KAKAO_REDIRECTURI }}
+
+          OAUTH_NAVER_CLIENTID: ${{ secrets.OAUTH_NAVER_CLIENTID }}
+          OAUTH_NAVER_CLIENTSECRET: ${{ secrets.OAUTH_NAVER_CLIENTSECRET }}
+          OAUTH_NAVER_REDIRECTURI: ${{ secrets.OAUTH_NAVER_REDIRECTURI }}
 
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-        shell: bash
+        run: |
+          chmod +x gradlew
 
-      - name: Build and Test
-        run: ./gradlew build test
+      - name: Build with Gradle
+        run: |
+          ./gradlew build
+
+      # 도커 빌드(도커 이미지 생성)
+      - name: Docker build
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/tanylog .
+          docker push ${{ secrets.DOCKER_USERNAME }}/tanylog
+          docker rmi ${{ secrets.DOCKER_USERNAME }}/tanylog
+
+      # 도커 이미지 배포 및 실행(EC2 ubuntu20.04로 배포)
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_HOST_DNS }} #(생성한 인스턴스의 DNS주소)
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }} #(인스턴스를 생성할 때 다운받은 pem키안에 값을 모두 복사해서 붙여넣기)
+          envs: GITHUB_SHA
+          script: |
+            sudo docker ps -a -q --filter "name=tanylog" | grep -q . && docker stop tanylog && docker rm tanylog | true
+            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/tanylog
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/tanylog
+            sudo docker run -d -p 80:8080 -e PROFILES=deploy --name tanylog ${{ secrets.DOCKER_USERNAME }}/tanylog
+            sudo docker rmi -f $(docker images -f "dangling=true" -q) || true
