--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
           sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" main/resources/application-deploy.yml
           sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application-deploy.yml
 
-      - name: Insert data source information and OAuth2 information into application.yml
+      - name: Insert test OAuth2 information into application.yml
         run: |
           cd src  
           sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" test/resources/application.yml
@@ -45,7 +45,7 @@ jobs:
           
           sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" test/resources/application.yml
           sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" test/resources/application.yml
-          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application.yml
+          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" test/resources/application.yml
 
         env:
           DATASOURCE_URL : ${{ secrets.DATASOURCE_URL }}
