## gradle.yml 수정

--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -18,17 +18,17 @@ spring:
     oauth2:
       client:
         registration:
-#          kakao:
-#            clientId: oauth_kakao_clientId
-#            clientSecret: oauth_kakao_clientSecret
-#            redirectUri: oauth_kakao_redirectUri
-#            authorizationGrantType: authorization_code
-#            client-authentication-method: POST
-#            clientName: Kakao
-#            scope:
-#              - profile_nickname
-#              - profile_image
-#              - account_email
+          kakao:
+            clientId: oauth_kakao_clientId
+            clientSecret: oauth_kakao_clientSecret
+            redirectUri: oauth_kakao_redirectUri
+            authorizationGrantType: authorization_code
+            client-authentication-method: POST
+            clientName: Kakao
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
 
           naver:
             clientId: oauth_naver_clientId
