--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -19,9 +19,9 @@ spring:
       client:
         registration:
           kakao:
-            clientId: oauth_kakao_clientId
-            clientSecret: oauth_kakao_clientSecret
-            redirectUri: oauth_kakao_redirectUri
+            clientId: 48ea5aa5d8f06270230758e2dfd936fa
+            clientSecret: nbxIjcWQ6xFIDQbCgUNys92E8xMrQnRN
+            redirectUri: http://localhost:8080/login/oauth2/code/kakao
             authorizationGrantType: authorization_code
             client-authentication-method: POST
             clientName: Kakao
@@ -31,9 +31,9 @@ spring:
               - account_email
 
           naver:
-            clientId: oauth_naver_clientId
-            clientSecret: oauth_naver_clientSecret
-            redirectUri: oauth_naver_redirectUri
+            clientId: 0cAtGfyWRxWLilxdIGOH
+            clientSecret: TvR_7K8f5h
+            redirectUri: http://localhost:8080/login/oauth2/code/naver
             authorizationGrantType: authorization_code
             clientName: Naver
             scope:
