--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,20 +21,20 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Insert data source information and OAuth2 information into application-deploy.yml
-        run: |
-          cd src
-          sed -i "s|datasource_url|$DATASOURCE_URL|g" main/resources/application-deploy.yml
-          sed -i "s|datasource_username|$DATASOURCE_USERNAME|g" main/resources/application-deploy.yml
-          sed -i "s|datasource_password|$DATASOURCE_PASSWORD|g" main/resources/application-deploy.yml
-          
-          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" main/resources/application-deploy.yml
-          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" main/resources/application-deploy.yml
-          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" main/resources/application-deploy.yml
-          
-          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" main/resources/application-deploy.yml
-          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" main/resources/application-deploy.yml
-          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application-deploy.yml          
+#      - name: Insert data source information and OAuth2 information into application-deploy.yml
+#        run: |
+#          cd src
+#          sed -i "s|datasource_url|$DATASOURCE_URL|g" main/resources/application-deploy.yml
+#          sed -i "s|datasource_username|$DATASOURCE_USERNAME|g" main/resources/application-deploy.yml
+#          sed -i "s|datasource_password|$DATASOURCE_PASSWORD|g" main/resources/application-deploy.yml
+#
+#          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" main/resources/application-deploy.yml
+#          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" main/resources/application-deploy.yml
+#          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" main/resources/application-deploy.yml
+#
+#          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" main/resources/application-deploy.yml
+#          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" main/resources/application-deploy.yml
+#          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application-deploy.yml
 
 #      - name: Insert test OAuth2 information into application.yml
 #        run: |
