--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,45 +11,45 @@ spring:
       init:
         mode: never
 
-#  security:
-#    oauth2:
-#      client:
-#        registration:
-#          kakao:
-#            clientId: 48ea5aa5d8f06270230758e2dfd936fa
-#            clientSecret: nbxIjcWQ6xFIDQbCgUNys92E8xMrQnRN
-#            redirectUri: http://localhost:8080/login/oauth2/code/kakao
-#            authorizationGrantType: authorization_code
-#            client-authentication-method: POST
-#            clientName: Kakao
-#            scope:
-#              - profile_nickname
-#              - profile_image
-#              - account_email
-#
-#          naver:
-#            clientId: 0cAtGfyWRxWLilxdIGOH
-#            clientSecret: TvR_7K8f5h
-#            redirectUri: http://localhost:8080/login/oauth2/code/naver
-#            authorizationGrantType: authorization_code
-#            clientName: Naver
-#            scope:
-#              - name
-#              - email
-#              - profile_image
-#
-#        provider:
-#          kakao:
-#            authorizationUri: https://kauth.kakao.com/oauth/authorize
-#            tokenUri: https://kauth.kakao.com/oauth/token
-#            userInfoUri: https://kapi.kakao.com/v2/user/me
-#            userNameAttribute: id
-#
-#          naver:
-#            authorizationUri: https://nid.naver.com/oauth2.0/authorize
-#            tokenUri: https://nid.naver.com/oauth2.0/token
-#            userInfoUri: https://openapi.naver.com/v1/nid/me
-#            userNameAttribute: response
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            clientId: 48ea5aa5d8f06270230758e2dfd936fa
+            clientSecret: nbxIjcWQ6xFIDQbCgUNys92E8xMrQnRN
+            redirectUri: http://localhost:8080/login/oauth2/code/kakao
+            authorizationGrantType: authorization_code
+            client-authentication-method: POST
+            clientName: Kakao
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
+
+          naver:
+            clientId: 0cAtGfyWRxWLilxdIGOH
+            clientSecret: TvR_7K8f5h
+            redirectUri: http://localhost:8080/login/oauth2/code/naver
+            authorizationGrantType: authorization_code
+            clientName: Naver
+            scope:
+              - name
+              - email
+              - profile_image
+
+        provider:
+          kakao:
+            authorizationUri: https://kauth.kakao.com/oauth/authorize
+            tokenUri: https://kauth.kakao.com/oauth/token
+            userInfoUri: https://kapi.kakao.com/v2/user/me
+            userNameAttribute: id
+
+          naver:
+            authorizationUri: https://nid.naver.com/oauth2.0/authorize
+            tokenUri: https://nid.naver.com/oauth2.0/token
+            userInfoUri: https://openapi.naver.com/v1/nid/me
+            userNameAttribute: response
 #  security:
 #    oauth2:
 #      client:
