--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2'
-//	testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+	testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
