--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AWS_HOST_DNS }} #(생성한 인스턴스의 DNS 주소)
+          host: 15.165.146.174 #(생성한 인스턴스의 DNS 주소)
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }} #(인스턴스를 생성할 때 다운받은 pem키안에 값을 모두 복사해서 붙여넣기)
           envs: GITHUB_SHA
