--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -72,9 +72,9 @@ jobs:
       - name: Docker build
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/tanylog .
-          docker push ${{ secrets.DOCKER_USERNAME }}/tanylog
-          docker rmi ${{ secrets.DOCKER_USERNAME }}/tanylog
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/tanylog:1.0 .
+          docker push ${{ secrets.DOCKER_USERNAME }}/tanylog:1.0
+          docker rmi ${{ secrets.DOCKER_USERNAME }}/tanylog:1.0
 
       # 도커 이미지 배포 및 실행(EC2 ubuntu20.04로 배포)
       - name: Deploy
@@ -86,7 +86,7 @@ jobs:
           envs: GITHUB_SHA
           script: |
             sudo docker ps -a -q --filter "name=tanylog" | grep -q . && docker stop tanylog && docker rm tanylog | true
-            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/tanylog
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/tanylog
+            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/tanylog:1.0
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/tanylog:1.0
             sudo docker run -d -p 80:8080 -e PROFILES=deploy --name tanylog ${{ secrets.DOCKER_USERNAME }}/tanylog
             sudo docker rmi -f $(docker images -f "dangling=true" -q) || true
