--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,6 @@ dependencies {
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 
@@ -51,6 +50,16 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar {
+	enabled = false
+}
+
+bootJar {
+	archivesBaseName = 'app'
+	archiveFileName = 'app.jar'
+	archiveVersion = "0.0.0"
 }
 
 // compileJava -> test -> asciidoctor -> bootJar 순으로 실행
