## 배포용 yml 수정 및 배포 스크립트 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,44 +21,44 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-#      - name: Insert data source information and OAuth2 information into application-deploy.yml
-#        run: |
-#          cd src
-#          sed -i "s|datasource_url|$DATASOURCE_URL|g" main/resources/application-deploy.yml
-#          sed -i "s|datasource_username|$DATASOURCE_USERNAME|g" main/resources/application-deploy.yml
-#          sed -i "s|datasource_password|$DATASOURCE_PASSWORD|g" main/resources/application-deploy.yml
-#
-#          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" main/resources/application-deploy.yml
-#          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" main/resources/application-deploy.yml
-#          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" main/resources/application-deploy.yml
-#
-#          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" main/resources/application-deploy.yml
-#          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" main/resources/application-deploy.yml
-#          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application-deploy.yml
+      - name: Insert data source information and OAuth2 information into application-deploy.yml
+        run: |
+          cd src
+          sed -i "s|datasource_url|$DATASOURCE_URL|g" main/resources/application-deploy.yml
+          sed -i "s|datasource_username|$DATASOURCE_USERNAME|g" main/resources/application-deploy.yml
+          sed -i "s|datasource_password|$DATASOURCE_PASSWORD|g" main/resources/application-deploy.yml
 
-#      - name: Insert test OAuth2 information into application.yml
-#        run: |
-#          cd src
-#          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" test/resources/application.yml
-#          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" test/resources/application.yml
-#          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" test/resources/application.yml
-#
-#          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" test/resources/application.yml
-#          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" test/resources/application.yml
-#          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" test/resources/application.yml
-#
-#        env:
-#          DATASOURCE_URL : ${{ secrets.DATASOURCE_URL }}
-#          DATASOURCE_USERNAME : ${{ secrets.DATASOURCE_USERNAME }}
-#          DATASOURCE_PASSWORD : ${{ secrets.DATASOURCE_PASSWORD }}
-#
-#          OAUTH_KAKAO_CLIENTID : ${{ secrets.OAUTH_KAKAO_CLIENTID }}
-#          OAUTH_KAKAO_CLIENTSECRET : ${{ secrets.OAUTH_KAKAO_CLIENTSECRET }}
-#          OAUTH_KAKAO_REDIRECTURI : ${{ secrets.OAUTH_KAKAO_REDIRECTURI }}
-#
-#          OAUTH_NAVER_CLIENTID: ${{ secrets.OAUTH_NAVER_CLIENTID }}
-#          OAUTH_NAVER_CLIENTSECRET: ${{ secrets.OAUTH_NAVER_CLIENTSECRET }}
-#          OAUTH_NAVER_REDIRECTURI: ${{ secrets.OAUTH_NAVER_REDIRECTURI }}
+          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" main/resources/application-deploy.yml
+
+          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" main/resources/application-deploy.yml
+          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" main/resources/application-deploy.yml
+
+      - name: Insert test OAuth2 information into application.yml
+        run: |
+          cd src
+          sed -i "s|oauth_kakao_clientId|$OAUTH_KAKAO_CLIENTID|g" test/resources/application.yml
+          sed -i "s|oauth_kakao_clientSecret|$OAUTH_KAKAO_CLIENTSECRET|g" test/resources/application.yml
+          sed -i "s|oauth_kakao_redirectUri|$OAUTH_KAKAO_REDIRECTURI|g" test/resources/application.yml
+
+          sed -i "s|oauth_naver_clientId|$OAUTH_NAVER_CLIENTID|g" test/resources/application.yml
+          sed -i "s|oauth_naver_clientSecret|$OAUTH_NAVER_CLIENTSECRET|g" test/resources/application.yml
+          sed -i "s|oauth_naver_redirectUri|$OAUTH_NAVER_REDIRECTURI|g" test/resources/application.yml
+
+        env:
+          DATASOURCE_URL : ${{ secrets.DATASOURCE_URL }}
+          DATASOURCE_USERNAME : ${{ secrets.DATASOURCE_USERNAME }}
+          DATASOURCE_PASSWORD : ${{ secrets.DATASOURCE_PASSWORD }}
+
+          OAUTH_KAKAO_CLIENTID : ${{ secrets.OAUTH_KAKAO_CLIENTID }}
+          OAUTH_KAKAO_CLIENTSECRET : ${{ secrets.OAUTH_KAKAO_CLIENTSECRET }}
+          OAUTH_KAKAO_REDIRECTURI : ${{ secrets.OAUTH_KAKAO_REDIRECTURI }}
+
+          OAUTH_NAVER_CLIENTID: ${{ secrets.OAUTH_NAVER_CLIENTID }}
+          OAUTH_NAVER_CLIENTSECRET: ${{ secrets.OAUTH_NAVER_CLIENTSECRET }}
+          OAUTH_NAVER_REDIRECTURI: ${{ secrets.OAUTH_NAVER_REDIRECTURI }}
 
       - name: Grant execute permission for gradlew
         run: |
@@ -80,7 +80,7 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: 15.165.146.174 #(생성한 인스턴스의 DNS 주소)
+          host: ${{ secrets.AWS_HOST_DNS }} #(생성한 인스턴스의 DNS 주소)
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }} #(인스턴스를 생성할 때 다운받은 pem키안에 값을 모두 복사해서 붙여넣기)
           envs: GITHUB_SHA
