--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://tanylog-main-db-mysql.c77gzgzeefpd.ap-northeast-2.rds.amazonaws.com:3306/blog
-    username: tany
-    password: wjsqudwns1!
+    url: datasource_url
+    username: datasource_username
+    password: datasource_password
     initialization-mode: always
 
   thymeleaf:
@@ -19,9 +19,9 @@ spring:
       client:
         registration:
           kakao:
-            clientId: 48ea5aa5d8f06270230758e2dfd936fa
-            clientSecret: nbxIjcWQ6xFIDQbCgUNys92E8xMrQnRN
-            redirectUri: http://localhost:8080/login/oauth2/code/kakao
+            clientId: oauth_kakao_clientId
+            clientSecret: oauth_kakao_clientSecret
+            redirectUri: oauth_kakao_redirectUri
             authorizationGrantType: authorization_code
             client-authentication-method: POST
             clientName: Kakao
@@ -31,9 +31,9 @@ spring:
               - account_email
 
           naver:
-            clientId: 0cAtGfyWRxWLilxdIGOH
-            clientSecret: TvR_7K8f5h
-            redirectUri: http://localhost:8080/login/oauth2/code/naver
+            clientId: oauth_naver_clientId
+            clientSecret: oauth_naver_clientSecret
+            redirectUri: oauth_naver_redirectUri
             authorizationGrantType: authorization_code
             clientName: Naver
             scope:
@@ -59,7 +59,7 @@ spring:
     defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     open-in-view: false
 
     properties:
